tests/baselines/reference/parserKeywordsAsIdentifierName2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/parserKeywordsAsIdentifierName2.ts (2 errors) ====
    // 'public' should be marked unusable, should complain on trailing /*
    a.public /*
               
!!! error TS1010: '*/' expected.
    ~
!!! error TS2304: Cannot find name 'a'.